src/objects/Special_Event_Cost__c.object
<CustomObject>
    <description>Object for managing costs associated with holding an event</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Currency field showing the amount of cost</description>
        <inlineHelpText>Currency field showing the amount of cost</inlineHelpText>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BSC_Event_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate if costs apply to a specific unit</description>
        <inlineHelpText>Populate if costs apply to a specific unit</inlineHelpText>
        <label>BSC Event Unit</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select a Unit from the Event in question</errorMessage>
            <filterItems>
                <field>Special_Event_Unit__c.Special_Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.BSC_Event__c</valueField>
            </filterItems>
            <infoMessage>Units of the Event in question</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Special_Event_Unit__c</referenceTo>
        <relationshipLabel>BSC Event Costs</relationshipLabel>
        <relationshipName>BSC_Event_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSC_Event__c</fullName>
        <description>related event</description>
        <inlineHelpText>related event</inlineHelpText>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>BSC Event Costs</relationshipLabel>
        <relationshipName>R00N50000001mIafEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bill_Date__c</fullName>
        <description>Date the payment is paid</description>
        <inlineHelpText>Date the payment is paid</inlineHelpText>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Shows the type of cost this refers to</description>
        <inlineHelpText>Shows the type of cost this refers to</inlineHelpText>
        <label>Category</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Course Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trainer Additional Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Total__c</fullName>
        <description>calculates the total cost by amount and number of delegates unless the type of cost is fixed.</description>
        <formula>IF(
 ISPICKVAL(Type__c,&quot;Fixed&quot;),
 Amount__c , Amount__c * Number_of_Delegates__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the total cost by amount and number of delegates unless the type of cost is fixed</inlineHelpText>
        <label>Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Due__c</fullName>
        <description>Date the payment is due.</description>
        <inlineHelpText>Date the payment is due.</inlineHelpText>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Short description of cost</description>
        <inlineHelpText>Short description of cost</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Any additional details of the cost that are relevant</description>
        <inlineHelpText>Any additional details of the cost that are relevant</inlineHelpText>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <description>Pulls in the number of delegates booking from the related event</description>
        <formula>BSC_Event__r.No_of_Delegates_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the number of delegates booking from the related event</inlineHelpText>
        <label>Number of Delegates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup field to Accounts to identify Supplier company</description>
        <inlineHelpText>lookup field to Accounts to identify Supplier company</inlineHelpText>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BSC Event Costs</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Indicates whether the type of cost is per delegate or fixed.</description>
        <inlineHelpText>Indicates whether the type of cost is per delegate or fixed.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BSC Event Costs</label>
    <nameField>
        <displayFormat>EC-{0000000}</displayFormat>
        <label>Cost Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSC Event Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>